--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@ body{
 
 .days {
   background: #eae4f8;
+    color: #183059;
 }
 
 .hours {
-  background: #eeeeee;
+  background: #fae7c7;
   color: #183059;
 }
 
 .minutes {
-  background: #276FBF;
+  background: #fac7df;
 }
 
 .seconds {
-  background: #F0A202;
+  background: #ccf4f0;
 }
 
 .numbers {
