--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@ body{
 }
 
 .minutes {
-  background: #fac7df;
+  background: #f8dee7;
 }
 
 .seconds {
-  background: #ccf4f0;
+  background: #d7f2fa;
 }
 
 .numbers {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Monotype Corsiva', sans-serif;
   color:  #183059;
   font-size: 4em;
   text-align: center;
