--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@ body{
 
 .days {
   background: #eae4f8;
-    color: #183059;
+    color: #d7aeb7;
 }
 
 .hours {
   background: #fae7c7;
-  color: #183059;
+  color: #d7aeb7;
 }
 
 .minutes {
-  background: #f8dee7;
+  background: #cae7ba;
+    color: #d7aeb7;
 }
 
 .seconds {
   background: #d7f2fa;
+    color: #d7aeb7;
 }
 
 .numbers {
