--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body{
 
 .numbers {
   font-family: 'Monotype Corsiva', sans-serif;
-  color:  #183059;
+  color:  #d7aeb7;
   font-size: 4em;
   text-align: center;
 }
