--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ body{
 #timer {
   color: #eeeeee;
   text-align: center;
-  text-transform: uppercase;
+  text-transform: lowercase;
   font-family: 'Monotype Corsiva', sans-serif;
-  font-size: .7em;
+  font-size: .10em;
   letter-spacing: 5px;
 }
 
