--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@ body{
 
 .days {
   background: #eae4f8;
-    color: #d7aeb7;
+    color: #d2a6af;
 }
 
 .hours {
   background: #fae7c7;
-  color: #d7aeb7;
+  color: #d2a6af;
 }
 
 .minutes {
   background: #cae7ba;
-    color: #d7aeb7;
+    color: #d2a6af;
 }
 
 .seconds {
   background: #d7f2fa;
-    color: #d7aeb7;
+    color: #d2a6af;
 }
 
 .numbers {
   font-family: 'Monotype Corsiva', sans-serif;
-  color:  #d7aeb7;
+  color:  #d2a6af;
   font-size: 4em;
   text-align: center;
 }
