--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
   text-align: center;
   text-transform: lowercase;
   font-family: 'Monotype Corsiva', sans-serif;
-  font-size: .10em;
+  font-size: 1em;
   letter-spacing: 5px;
 }
 
