--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
   text-align: center;
   text-transform: lowercase;
   font-family: 'Monotype Corsiva', sans-serif;
-  font-size: 1em;
+  font-size: 1.2em;
   letter-spacing: 5px;
 }
 
@@ -33,7 +33,7 @@ body{
 }
 
 .hours {
-  background: #e9d7c7;
+  background: #f2dfce;
   color: #d2a6af;
 }
 
